--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ features = ["tokio", "http1", "json"]
 [dependencies.tokio]
 version = "1"
 default-features = false
-features = ["macros", "rt-multi-thread", "net"]
+features = ["macros", "rt-multi-thread", "net", "sync"]
 
 [dependencies.serde]
 version = "1"
@@ -20,3 +20,13 @@ features = ["derive"]
 
 [dependencies.serde_json]
 version = "1"
+
+[dependencies.tokio-stream]
+version = "0.1"
+default-features = false
+features = ["sync"]
+
+[dependencies.tower-http]
+version = "0.6"
+default-features = false
+features = ["fs"]
